project(LIEF)

# Silence Warnings
add_compile_options(-w -Wno-psabi)

## LIEF

# Options
force_set(LIEF_C_API FALSE BOOL)
force_set(LIEF_EXAMPLES FALSE BOOL)
force_set(LIEF_PYTHON_API FALSE BOOL)
force_set(LIEF_TESTS FALSE BOOL)
force_set(LIEF_USE_CCACHE FALSE BOOL)
force_set(LIEF_LOGGING FALSE BOOL)
force_set(LIEF_LOGGING_DEBUG FALSE BOOL)
force_set(LIEF_ENABLE_JSON FALSE BOOL)
force_set(LIEF_ELF TRUE BOOL)
force_set(LIEF_PE FALSE BOOL)
force_set(LIEF_MACHO FALSE BOOL)
force_set(LIEF_DEX FALSE BOOL)
force_set(LIEF_ART FALSE BOOL)
force_set(LIEF_OAT FALSE BOOL)
force_set(LIEF_VDEX FALSE BOOL)
force_set(LIEF_COFF FALSE BOOL)
force_set(LIEF_DISABLE_FROZEN TRUE BOOL)
force_set(LIEF_FORCE32 FALSE BOOL)
force_set(LIEF_EXTRA_WARNINGS FALSE BOOL)
force_set(LIEF_OPT_NLOHMANN_JSON_EXTERNAL FALSE BOOL)
force_set(LIEF_FORCE_API_EXPORTS FALSE BOOL)
force_set(LIEF_PY_LIEF_EXT FALSE BOOL)
force_set(LIEF_RUST_API FALSE BOOL)
force_set(LIEF_DISABLE_EXCEPTIONS TRUE BOOL)
force_set(LIEF_SO_VERSION FALSE BOOL)
force_set(LIEF_DEBUG_INFO FALSE BOOL)
force_set(LIEF_OBJC FALSE BOOL)
force_set(LIEF_DYLD_SHARED_CACHE FALSE BOOL)
force_set(LIEF_ASM FALSE BOOL)
force_set(LIEF_ASAN FALSE BOOL)
force_set(LIEF_LSAN FALSE BOOL)
force_set(LIEF_TSAN FALSE BOOL)
force_set(LIEF_USAN FALSE BOOL)
force_set(LIEF_FUZZING FALSE BOOL)
force_set(LIEF_PROFILING FALSE BOOL)
force_set(LIEF_EXTERNAL_SPDLOG FALSE BOOL)
force_set(LIEF_OPT_EXTERNAL_EXPECTED FALSE BOOL)
force_set(LIEF_OPT_UTFCPP_EXTERNAL FALSE BOOL)
force_set(LIEF_OPT_MBEDTLS_EXTERNAL FALSE BOOL)
force_set(LIEF_OPT_NANOBIND_EXTERNAL FALSE BOOL)
force_set(LIEF_OPT_EXTERNAL_SPAN FALSE BOOL)
force_set(LIEF_USE_MELKOR FALSE BOOL)
force_set(LIEF_INSTALL FALSE BOOL)

# Build
set(MESSAGE_QUIET TRUE)
add_subdirectory(src EXCLUDE_FROM_ALL SYSTEM)
unset(MESSAGE_QUIET)

# Install
setup_library(LIB_LIEF TRUE TRUE)

# License
install(FILES src/LICENSE DESTINATION "${MCPI_LEGAL_DIR}/LIEF")

# Fix Flags
function(fix_flags property)
    get_target_property(flags LIB_LIEF "${property}")
    list(REMOVE_ITEM flags "_GLIBCXX_USE_CXX11_ABI=1")
    set_target_properties(LIB_LIEF PROPERTIES "${property}" "${flags}")
endfunction()
fix_flags(COMPILE_DEFINITIONS)
fix_flags(INTERFACE_COMPILE_DEFINITIONS)

# Patch
execute_process(
    COMMAND "patch" "-p1" "--forward" "--reject-file=-"
    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/src"
    INPUT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/patches/fix-windows-build.patch"
    OUTPUT_QUIET
)